# RAG

./: main.py  pyproject.toml  requirements.txt
data/sample_text_files/: deep_learning.txt  python_intro.txt
notebooks/: document.ipynb  pdfloader.ipynb
